--- a/class12_MLRInference/class12_MLRInference.Rnw
+++ b/class12_MLRInference/class12_MLRInference.Rnw
@@ -122,7 +122,7 @@ summary(mlr1)$coef
 \bi
         \myitem Can we say anything about whether the effect of \texttt{airquality} is ``significant" after adjusting for other variables?
         \myitem Can we say whether adding \texttt{airquality} improves the fit of our model?
-	\myitem Can we compare this model to a model with only \texttt{lMiles} and \texttt{Income}?
+	\myitem Can we compare this model to a model with only \texttt{crowding}, \texttt{nutrition} and \texttt{smoking}?
 \ei
 
 \end{frame}
@@ -288,13 +288,10 @@ $$P(\mbox{reject at least one } H_{0i} | \mbox{all } H_{0i} \mbox{are true}) = \
 To calculate the FWER
 \bi
 	\myitem First note $P(\mbox{no rejections} | \mbox{all } H_{0i} \mbox{are true}) = (1-\alpha)^{k}$
-	\myitem It follows that  $P(\mbox{at least one rejection} | \mbox{all } H_{0i} \mbox{are true}) = 1- (1-\alpha)^{k}$
-	\myitem Further, 
+	\myitem It follows that
 	\beqa
-		FWER = 1- (1-\alpha)^{k} & = & 1- \left(1-\frac{k \alpha}{k}\right)^{k} \\
-				& \approx & 1- exp(1-{k \alpha}) \\
-				& \approx & 1- (1-{k \alpha}) \\
-				& = & {k \alpha} \\
+		\mbox{FWER}  & = & P(\mbox{at least one rejection} | \mbox{all } H_{0i} \mbox{are true}) \\
+                & = &  1 - (1-\alpha)^{k}
 	\eeqa
 \ei
 
@@ -306,8 +303,9 @@ To calculate the FWER
 
 \begin{frame}[fragile]{Family-wise error rate}
 
+$$ \mbox{FWER} = 1 - (1-\alpha)^{k}$$ 
 \scriptsize
-<<FWERPlot, fig.height=4>>=
+<<FWERPlot, fig.height=3.5>>=
 alpha <- .05
 k <- 1:100
 FWER <- 1-(1-alpha)^k
