--- a/class16_MLRDiagnostics/class16_MLRDiagnostics.Rnw
+++ b/class16_MLRDiagnostics/class16_MLRDiagnostics.Rnw
@@ -10,7 +10,7 @@
 
 %        The following variables are assumed by the standard preamble:
 %	Global variable containing module name:
-\title{MLR Diagnostics}
+\title{MLR Model Checking}
 %	Global variable containing module shortname:
 %		(Currently unused, may be used in future.)
 \newcommand{\ModuleShortname}{simPar}
@@ -63,7 +63,7 @@ theme_set(theme_bw())
 
 \begin{frame}{Model selection vs. model checking}
 
-\begin{block}{With $$ y | \bx = f(\bx) + \epsilon$$}
+\begin{block}{Assume $ y | \bx = f(\bx) + \epsilon$}
 \bi
         \myitem model selection focuses on how you construct $f(\cdot)$;
         \myitem model checking asks whether the $\epsilon$ match the assumed form.
@@ -75,9 +75,9 @@ theme_set(theme_bw())
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Model checking}
+\begin{frame}{Model checking: possible challenges}
 
-Two major areas of concern:
+\begin{block}{Two major areas of concern}
 \bi
         \myitem Global lack of fit, or general breakdown of model assumptions
 	\bi
@@ -89,13 +89,14 @@ Two major areas of concern:
 	\ei
 	\myitem Effect of influential points and outliers
 \ei
+\end{block}
 
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Model checking}
+\begin{frame}{Model checking: possible solutions}
 
 \bi
 	\myitem Global lack of fit, or general breakdown of model assumptions
@@ -114,9 +115,9 @@ Two major areas of concern:
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[fragile]{Residual plots}
+\begin{frame}[fragile]{Residual plots: verifying assumptions}
 
-Which assumptions are these plots evaluating? Assumption violations are not often this obvious (but sometimes they are!).
+\center Which assumptions are these plots evaluating? 
 
 <<errorModels, echo=FALSE, message=FALSE, fig.height=3>>=
 x = sort(runif(200, 0, 10))
@@ -135,18 +136,23 @@ dat <- data.frame(fit=rep(1:3, each=200), fitted=fits, residual=resids)
 qplot(fitted, residual, data=dat, geom=c("point", "smooth"), se=FALSE) + facet_wrap(~fit, scales="free") + geom_hline(yintercept=0, color="black")
 @
 
+Assumption violations are not often this obvious \\ (but sometimes they are!).
+
 \end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[fragile]{QQ-plots for checking Normality assumption}
+\begin{frame}[fragile]{QQ-plots for checking Normality of residuals}
 
+\begin{block}{QQ plot defined}
 QQ-plot stands for quantile-quantile plot, and is used to compare two distributions. If the two distributions are the same, then each point (which represents a quantile from each distribution) should lie along the y=x line.
+\end{block}
+
 
 \begin{block}{For a single $(x,y)$ point}
 \bi
         \myitem $x$ =  a specific quantile for the N(0,1) distribution 
-        \myitem $y$ = the same quantile from the sample of data
+        \myitem $y$ = the same quantile from the (standardized, if needed) sample of data
 \ei
 \end{block}
 
@@ -154,7 +160,7 @@ QQ-plot stands for quantile-quantile plot, and is used to compare two distributi
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[fragile]{Gaussian or Normal(0,1) distribution}
+\begin{frame}[fragile]{example: Gaussian or Normal(0,1) distribution}
 
 <<qqnorm, message=FALSE, fig.height=3.5>>=
 d1 <- rnorm(1000)
@@ -169,7 +175,7 @@ qqline(d1)
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}[fragile]{Student's T-distribution with 6 d.f.}
+\begin{frame}[fragile]{example: Student's T-distribution with 6 d.f.}
 
 <<qqt, message=FALSE, fig.height=3.5>>=
 d1 <- rt(1000, df=5)
@@ -183,7 +189,7 @@ qqline(d1)
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\begin{frame}[fragile]{Truncated Gaussian}
+\begin{frame}[fragile]{example: Truncated Gaussian}
 
 <<qqtrunc, message=FALSE, fig.height=3.5>>=
 d1 <- rnorm(1000)
@@ -210,17 +216,29 @@ qqnorm(fit3$residuals, pch = 19)
 qqline(fit3$residuals)
 @
 
+<<repeatPlot, fig.height=2, echo=FALSE, message=FALSE>>=
+qplot(fitted, residual, data=dat, geom=c("point", "smooth"), se=FALSE) + facet_wrap(~fit, scales="free") + geom_hline(yintercept=0, color="black")
+
+@
+
+
 \end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Non-constant variance}
+\begin{frame}{Model checking: possible solutions}
 
-What to do ...
 \bi
-        \myitem Nothing; just use least squares and bootstrap
-	\myitem Use weighted LS, GLS (later)
-	\myitem Use a variance stabilizing transformation
+        \myitem Global lack of fit, or general breakdown of model assumptions
+	\bi
+		\item Residual analysis -- QQ plots, residual plots against fitted values and predictors
+		\item Adjusted variable plots
+	\ei
+	\myitem Effect of influential points and outliers
+	\bi
+		\item Measure of leverage, influence, outlying-ness
+	\ei
 \ei
 
 \end{frame}
@@ -228,22 +246,21 @@ What to do ...
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \begin{frame}{Isolated points}
 
-Points can be isolated in three ways
+\begin{block}{Points can be isolated in three ways}
 \bi
-        \myitem Leverage point -- outlier in $x$ 
-	\myitem Outlier -- outlier in $y$ 
+        \myitem Leverage point -- outlier in $x$, measured by hat matrix
+	\myitem Outlier -- outlier in $y$, measured by residual
 	\myitem Influential point -- a point that largely affects $\bbeta$
 	\bi
 		\item Deletion influence; $| \hat{\bbeta} - \hat{\bbeta}_{(-i)}|$
 		\item Basically, a high-leverage outlier
 	\ei
 \ei
-Leverage is measured by the hat matrix, outlying-ness by the residual
+\end{block}
 
 \end{frame}
 
@@ -254,53 +271,53 @@ Leverage is measured by the hat matrix, outlying-ness by the residual
 
 We measure leverage (the ``distance" of $\bx_i$ from the distribution of $\bx$) using
 $$ h_{ii} = \bx_{i}^{T} (\bX^{T} \bX)^{-1} \bx_{i} $$
-where $h_{ii}$ is the $(i,i)^{th}$ entry of the hat matrix.
-\end{frame}
+where $h_{ii}$ is the $(i,i)^{th}$ entry of the hat matrix. Where, recall
 
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{frame}{Leverage}
-
-Some notes about the hat matrix
-\bi
-        \myitem $\sum_{i} h_{ii} \stackrel{def}{=} tr(\bH) = (p+1)$
-	\vspace{1cm}
-\ei
-(Note -- the trace of the hat matrix generalizes to non-parametric methods, where you don't have a specific number of parameters to count. This is a useful measure of ``model size" or ``effective degrees of freedom" in these cases.)
-\end{frame}
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\begin{frame}{Leverage}
-
-Some notes about the hat matrix
-\bi
-	\myitem $\hat{y_i} = \sum_{j} h_{ij} y_{j}$
-	\vspace{2cm}
-	\myitem $\sum_{i} h_{ij} = \sum_{j} h_{ij} = 1$
-	\vspace{2cm}
-\ei
-These mean that $h_{ii}$ is the weight given to $y_{i}$ in determining $\hat{y}_{i}$
+$$ \bH = \bX(\bX^{T}\bX)^{-1}\bX^T $$
 
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{frame}{Quantifying Leverage via the Hat Matrix}
 
-\begin{frame}{Leverage}
+Note that 
+$$\sum_{i} h_{ii} \stackrel{def}{=} tr(\bH) = p$$
+where $p$ is the total number of independent predictors (i.e. $\beta$s) in your model.
 
-What counts as ``big" leverage?
+
+\begin{block}{What counts as ``big" leverage?}
 \bi
-	\myitem Average leverage is $(p+1)/n$
-	\myitem Typical rules of thumb are $2(p+1)/n$ or $3(p+1)/n$
+        \myitem Average leverage is $p/n$
+	\myitem Typical rules of thumb are $2p/n$ or $3p/n$
 	\myitem Leverage plots can be useful as well
 \ei
+\end{block}
 
 \end{frame}
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Example Leverage plot with lung data}
+
+\scriptsize
+<<lungData, echo=FALSE>>=
+data <- read.table("~/Google Drive/teaching/methods2/datasets/lung/lungc.txt",header=TRUE)
+@
+
+<<levPlots1, fig.height=3>>=
+mlr <- lm(disease~crowding, data=data)
+hii <- hatvalues(mlr)
+@
+
+
+<<levPlots, fig.height=3, tidy=FALSE>>=
+hii <- 1:10 
+x <- 1:length(hii)
+qplot(x, hii, geom="point")
+@
+
+\end{frame}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -358,6 +375,46 @@ Suppose you fit a linear model in \texttt{R};
 \ei
 
 \end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\begin{frame}{Non-constant variance}
+
+\begin{block}{What to do ...}
+\bi
+        \myitem Nothing; just use least squares and bootstrap
+        \myitem Use weighted LS, GLS (later)
+	\myitem Use a variance stabilizing transformation
+\ei
+\end{block}
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\begin{frame}{Data Transformations}
+
+If some of your 
+
+<<logTransform>>=
+n <- 500 
+x <- exp(runif(n, 0, 10))
+ey <- 10 + 2*log(x) 
+y <- ey + rnorm(n, sd=ey)
+qplot(x)
+qplot(x,y)
+qplot(log(x),y)
+qplot(x, resid(lm(y~x)))
+@
+
+
+\end{frame}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
